cursive-bootstrap/tests/ui/E-TYP/E-TYP-2070.cursive
// RUN: compile-fail
// DIAG: E-TYP-2070
// SPEC: 5.7
// DESC: Implicit widening on non-niche-layout-compatible type

modal Resource {
    state Active { handle: *mut u8 }
    state Released { }
}

public procedure main(move ctx: Context) -> i32 {
    let r: Resource@Active = Resource@Active{ handle: null }
    let general: Resource = r //~ ERROR E-TYP-2070
    return 0
}
